
2006-11-16  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Added freeIndexSetId GROUP BY in tx_indexedsearch->execFinalQuery() to make SELECT work on DBs other than Mysql

2006-11-07  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4348: Wrong time format in syslog output

2006-11-06  Michael Stucki  <michael@typo3.org>

	* Fixed bug #3495: Endless recursion with some MySQL versions

2006-11-03  Michael Stucki  <michael@typo3.org>

	* Fixed bug #4411: Popup-menues appearing in topframe in Internet Explorer 7. Thanks to Mads Brunn for providing a fix.
	* Fixed bug #4425: Garble code in adodb extension
	* Fixed Cross Site Scripting issue in fe_adminLib.inc. For details, see http://typo3.org/teams/security/security-bulletins/typo3-20061010-1/ - thanks to Andriu Isenring Ritsch for discovering and reporting this issue.

2006-11-02  Michael Stucki  <michael@typo3.org>

	* Fixed bug #1655: t3lib_div::substUrlsInPlainText() did not support HTTPS links
	* Fixed bug #1236 again: 404 error while using the new content wizard
	* Fixed bug #4443: Items in CE "Insert Records" don't have edit options in context menu any longer
	* Add security hints in typo3/mod/tools/em/class.em_index.php

2006-10-30  Karsten Dambekalns  <karsten@typo3.org>

	* Fixed bug #3637 in EM (translation handling)

2006-10-17  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #3199: SUing to myself?
	* Fixed bug #3720: Multilanguage Flexforms don't work after migrating a site from one language to more languages

2006-10-17  Ernesto Baschny  <ernst@cron-it.de>

	* Fix: no more "ERR" or "Unpacking the language pack failed" in the translation handling with curl enabled.

2006-10-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fix: t3lib_db::exec_SELECTgetRows() did not free recordset

2006-10-13  Karsten Dambekalns  <karsten@typo3.org>

	* ADOdb system extension updated to upstream 4.93. Added danish translation, thanks to Peter Klein!

2006-10-12  Martin Kutschker  <martin.t.kutschker@blackbox.net>
