@@ -2,6 +2,8 @@
 2006-11-16  Martin Kutschker  <martin.t.kutschker@blackbox.net>
 
 	* Added freeIndexSetId GROUP BY in tx_indexedsearch->execFinalQuery() to make SELECT work on DBs other than Mysql
+	* Add an index prefix to Mysql key definitions when (var)chars are changed to text when multiplyDBfieldSize is set
+	* Reverted change to key of sys_refindex on 2006-09-01 (key prefix is set now automatically)
 
 2006-11-07  Michael Stucki  <michael@typo3.org>
 
